feat/fix: added simpler duplicate detection with hopefully less timing issues, lost a few options for now

--- a/options.html
+++ b/options.html
@@ -1,27 +1,11 @@
 <!doctype html>
 <head>
   <meta charset="utf-8" />
-  <title>options</title>
+  <title>Dont Open Duplicate Tabs - Options</title>
 </head>
 <body style="padding: 7px">
   <fieldset>
-    <legend><b>Basic Options</b></legend>
-    <span> <input type="checkbox" id="allWindows" /> Monitor all Windows</span
-    ><br />
-    <span> <input type="checkbox" id="closeOld" /> Close Older Tabs</span><br />
-    <span> <input type="checkbox" id="setFocus" /> Switch Focus </span><br />
-    <span>
-      <input
-        type="checkbox"
-        id="rmNotify"
-        name="permission"
-        value="notifications"
-      />
-      Show Notifications</span
-    ><br />
-  </fieldset>
-  <fieldset>
-    <legend><b>Ignore URLs</b></legend>
+    <legend><b>Ignored URLs</b></legend>
     <textarea
       id="matchers"
       style="width: 100%; min-height: 20em"
