--- a/options.html
+++ b/options.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <head>
   <meta charset="utf-8" />
-  <title>Dont Open Duplicate Tabs - Options</title>
+  <title>Auto Close Duplicate Tabs - Options</title>
 </head>
 <body style="padding: 7px">
   <fieldset>
-    <legend><b>Ignored URLs</b></legend>
+    <legend><b>Ignore URLs</b></legend>
     <textarea
       id="matchers"
       style="width: 100%; min-height: 20em"
